--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   display: flex;
   justify-content: center;  
   align-items: center; 
+  min-height: 100vh;  
 }
 .diary img {
 	width: 300px;
